Bug. Remove overflow:hidden from top-menu. Not working on safari

--- a/app/scss/custom/common/_menu.scss
+++ b/app/scss/custom/common/_menu.scss
@@ -14,7 +14,6 @@ $logo-height  : 15px;
     background-color: $white;
     position: fixed;
     height: $header-height!important;
-    overflow: hidden;
     z-index: 10;
 }
 
